crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@not_junction_single_pk_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type Other struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    Regulars []Regular `gorm:"foreignKey:OtherID" json:"-"`
}

func (Other) TableName() string { return "other" }
