crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@triple_reverse_relations_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type Dual struct {
    Username string `gorm:"column:username;primaryKey;type:text" json:"username"`
    TripleRelsByUsername []TripleRel `gorm:"foreignKey:Username" json:"-"`
    TripleRelsByCheckerUsername []TripleRel `gorm:"foreignKey:CheckerUsername" json:"-"`
    TripleRelsByOtherUsername []TripleRel `gorm:"foreignKey:OtherUsername" json:"-"`
}

func (Dual) TableName() string { return "dual" }
