crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@triple_reverse_relations_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Dual {
  username String @id @db.Text
  username_triple_rel TripleRel[] @relation("TripleRelUsername")
  checker_username_triple_rel TripleRel[] @relation("TripleRelCheckerUsername")
  other_username_triple_rel TripleRel[] @relation("TripleRelOtherUsername")

  @@map("dual")
}
