crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@username_fk_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Session(models.Model):
    id = models.UUIDField(primary_key=True)
    username = models.ForeignKey("User", on_delete=models.RESTRICT, db_column="username", related_name="+")

    class Meta:
        db_table = "session"
