crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@username_fk_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

import (
    "github.com/google/uuid"
)

type Session struct {
    ID uuid.UUID `gorm:"column:id;primaryKey;type:uuid" json:"id"`
    Username string `gorm:"column:username;not null;type:text" json:"username"`
    UsernameUser User `gorm:"foreignKey:Username" json:"-"`
}

func (Session) TableName() string { return "session" }
