crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@username_fk_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 376
expression: rendered
---
model Session {
  id String @id
  username String
  username_rel User @relation(fields: [username], references: [username])

  @@map("session")
}
