crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__reserved_word_identifiers_snapshot@reserved_word_identifiers_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Order(models.Model):
    id = models.IntegerField(primary_key=True)
    user = models.TextField()
    select = models.IntegerField()

    class Meta:
        db_table = "order"
