crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__reserved_word_identifiers_snapshot@reserved_word_identifiers_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type Order struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    User string `gorm:"column:user;not null;type:text" json:"user"`
    Select int32 `gorm:"column:select;not null" json:"select"`
}

func (Order) TableName() string { return "order" }
